2005-12-14  Jeremy Cribb <jcribb@email.unc.edu>
	* raw2img.m: added stride parameter.
	* raw_balance_gain.m: for a raw video, this balances the gain values for both channels in each pulnix raw image and saves a new raw file.
	* raw_swaplines.m: for a raw video, this corrects the swapped lines problem for each frame.  This follows the same algorithm in gluitake.

2005-12-05  Jeremy Cribb <jcribb@email.unc.edu>
	* get_mips.m: added start and stop frames to parameter list.

2005-11-16  Jeremy Cribb <jcribb@email.unc.edu>
	* mip.m: fixed an off-by-one bug that would break code whenever capturing intensity projections with a stride of 1.

2005-11-15   Jeremy Cribb <jcribb@email.unc.edu>
	* raw_mean_subtract.m added. performs mean subtraction from a .raw file and saves a new .raw file

2005-11-15  Jeremy Cribb <jcribb@email.unc.edu>
	* enhance_contrast.m: added. increases gain for pulnix .raw files and saves a new .raw file.  maximum pixel value is set to 1 (255).

2005-11-01  Jeremy Cribb <jcribb@email.unc.edu>
	* mip.m: added mean projection image as a mode.

2005-05-16  Jeremy Cribb <jcribb@email.unc.edu>
	* mip.m: adjusted output so that if an output variable is defined, the MIP is outputted as a 2D matrix, otherwise it just displays an image of the MIP.

2005-05-15  Jeremy Cribb <jcribb@email.unc.edu>
	* raw2img.m: fixed a bug that offset the frame number by one.

2005-05-09  Jeremy Cribb <jcribb@email.unc.edu>
	* swaplines.m: added.  Swaps lines in image(s) if Pulnix misbehaves.

2005-02-11  Ben Wilde <wilde@cs.unc.edu>
	* beadOrbitAngles.m: Added this file, which computes the angle that a bead orbits around a rod.

2005-02-10  Jeremy Cribb <jcribb@email.unc.edu>
	* mip.m: fixed time bug for when file started in middle.

2005-02-09  Jeremy Cribb <jcribb@email.unc.edu>
	* raw2avi.m: added some image processing for handling low-light datasets.
	* clipraw.m: added.  cuts out and saves a range of frames as a new RAW file.
