@@ -1,3 +1,7 @@
+2006-04-03  Jeremy Cribb <jcribb@email.unc.edu>
+	* video_psd.m: added.  inputs video tracking data and attaches psd info to structure.
+	* raw2avi.m: updated some documentation.  mainly playing around with video codecs for video compression.
+	
 2005-12-14  Jeremy Cribb <jcribb@email.unc.edu>
 	* raw2img.m: added stride parameter.
 	* raw_balance_gain.m: for a raw video, this balances the gain values for both channels in each pulnix raw image and saves a new raw file.
